--- a/index.html
+++ b/index.html
@@ -20,35 +20,11 @@
           </nav>
       </header>   
 
-      <!-- <div class="cajaContenedora">
+    <div class="cajaContenedora">
   <img class="carru" name="slider">
   <script class="carrusel" src="./carrusel.js"></script>
 </div> 
-</body> -->
-
-<div id="slider">
-  <img src="./imagenes/alfamilka.webp" alt="">
-  <img src="./imagenes/alfaoreo.webp" alt="">
-  <img src="./imagenes/alfaoreomilka.webp" alt="">
-  <img src="./imagenes/alfapepitos.webp" alt="">
-  <img src="./imagenes/aquariusmanz.webp" alt="">
-  <img src="./imagenes/barrakitkat.png" alt="">
-  <img src="./imagenes/gallesoreo.webp" alt="">
-  <img src="./imagenes/galleterrabusi.webp" alt="">
-  <img src="./imagenes/laysjamon.webp" alt="">
-</div>
-<div>
-  <table>
-    <tr>
-      <td id="izquierda">
-        <input type="button" value="anterior" onclick="cambiarManual('IZQ')">
-      </td>
-      <td id="derecha">
-        <input type="button" value="siguiente" onclick="cambiarManual('DER')">
-      </td>
-    </tr>
-  </table>
-</div>
+</body>
 <script type="text/javascript" src="./carrusel.js"></script>			
 </body>
 </html>
