actualizacion de master

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!-- nav -->
     <header>  
       <div>
-        <nav> 
+        <nav>
+          <a class="logo" href="./index.html"><img src="https://turbologo.com/designs/60089433></a> 
           <label class="filtro">
             <i class="fas fa-bars"></i>
           
