--- a/inicio_sesion2.html
+++ b/inicio_sesion2.html
@@ -2,29 +2,28 @@
 <html>
 <head>
 	<title>Inicio Sesion</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/inicio_sesion2.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
-
 			<div class="signup">
 				<form>
-					<label for="chk" aria-hidden="true">Crear Cuenta </label>
-					<input type="text" name="txt" placeholder="Nombre de Usuario" required="">
+					<label for="chk" aria-hidden="true">Iniciar Sesión</label>
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="password" name="pswd" placeholder="Contraseña" required="">
 					<button>Crear</button>
 				</form>
 			</div>
-
 			<div class="login">
 				<form>
-					<label for="chk" aria-hidden="true">Iniciar Sesion</label>
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Contraseña" required="">
-					<button>Iniciar</button>
+					<label for="chk" aria-hidden="true">Crear Cuenta</label>
+					<input  class="barraf" type="text" name="txt" placeholder="Nombre de Usuario" required="">
+					<input class="barraf" type="email" name="email" placeholder="Email" required="">
+					<input class="barraf" type="password" name="pswd" placeholder="Contraseña" required="">
+					<button class="boton">Crear</button>
 				</form>
 			</div>
 	</div>
