--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>  
       <div>
         <nav>
-          <a class="logo" href="./index.html"><img src="https://turbologo.com/designs/60089433></a> 
+          <a class="logo" href="./index.html"><img src="https://turbologo.com/designs/60089433"></a> 
           <label class="filtro">
             <i class="fas fa-bars"></i>
           
@@ -41,7 +41,7 @@
 
       <!-- card -->
 
-      <section class="product"> 
+    <!-- <section class="product"> 
         <h2 class="product-category">best selling</h2>
         <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
@@ -168,7 +168,7 @@
             </div>  
         </div>
     </section>
-
+-->
 
 <!-- footer -->
       <div class="footer-content pt-5 pb-5">
