boton de carrito

--- a/carrito.html
+++ b/carrito.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Carrito de Compras</h1>
+        <a href="/index.html" class="btn"><button><i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+        </button></a>
     </header>
     
     <main>
@@ -36,6 +38,7 @@
             <p id="total">Total: $0.00</p>
         </section>
     </main>
+
 
     <script>
         // Código JavaScript para manejar el carrito
