--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
    
         <div>
           <a href="inicio_sesion2.html" class="btn"><button>Iniciar Sesion</button></a>
-          <a href="./carrito.html" class="btn"><button><i class="fa fa-cart-plus carrito" aria-hidden="true"></i>
-          </button></a>
+          <a href="./carrito.html" class="btn"><button><i class="fa fa-cart-plus carrito" aria-hidden="true"></i></button></a>
         </div>
         
       
