Páginas de productos creadas.12/09

--- a/Bebidas.html
+++ b/Bebidas.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/fuentes.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/fuentes.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,32 +39,54 @@
           </button></a>
         </div>
     </header>
-
-<!-- footer -->
-      <div class="footer-content pt-5 pb-5">
-    <div class="copyright-area">
-      <div class="container">
-          <div class="row">
-              <div class="col-xl-6 col-lg-6 text-center text-lg-left ">
-                  <div class="copyright-text ">
-                      <p>Copyright &copy; 2024, <a href="https://github.com/iarachamorro/ProyectoKiosco.git">SanAbiMaDa</a></p>
-                  </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                  <div class="footer-menu">
-                      <ul>
-                          <li><a href="#">Home</a></li>
-                          <li><a href="#">Terms</a></li>
-                          <li><a href="#">Privacy</a></li>
-                          <li><a href="#">Policy</a></li>
-                          <li><a href="#">Contact</a></li>
-                      </ul>
-                  </div>
-              </div>
+<div class="container">
+    <div class="row align-items-start">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="./imagenes/alfamilka.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Alfajor Milka
+                1.200,00 ARS.</p>
+            </div>
           </div>
       </div>
-  </div>
-  </div>
-      </footer>		
-  </body>
-</html>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="./imagenes/alfaoreo.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Alfajor Oreo
+                1.250,00 ARS
+                .</p>
+            </div>
+          </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="./imagenes/alfapepitos.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Alfajor Pepitos
+                1.990,00 ARS
+                .</p>
+            </div>
+          </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="./imagenes/barrakitkat.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">barra Kit Kat
+                1.250,00 ARS
+                .</p>
+            </div>
+          </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="./imagenes/minirhodesia.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Mini Rhodesia
+                890,00 ARS
+                .</p>
+            </div>
+          </div>
+      </div>
