--- a/index.html
+++ b/index.html
@@ -65,9 +65,138 @@
     </header>
 
 <!-- carrusel -->
-<script src="./JS/Carruselpro.js"></script>
+
         <section class="product"> 
-            <h2 class="product-category">best selling</h2>
+            <h2 class="product-category">Mas Vendidos</h2>
+            <button class="pre-btn"><img src="./imagenes/arrow.png" alt=""></button>
+            <button class="nxt-btn"><img src="./imagenes/arrow.png" alt=""></button>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/alfamilka.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir Al Carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand"> Milka Negro</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$1200</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/alfaoreo.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand"> Oreo</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/alfaoreomilka.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand"> Milka Triple</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/alfapepitos.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand"> Pepitos</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/aquariusmanz.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Aquarius Manzana</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/barrakitkat.png" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Chocolate Kitkat</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/gallesoreo.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Galletitas Oreo</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/galleterrabusi.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Galletitas Terrabusi</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/laysjamon.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Papas Lays Jamon</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./imagenes/minirhodesia.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Rhodesia</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <div class="product">
+            <h2 class="product-category">Promociones</h2>
             <button class="pre-btn"><img src="./imagenes/arrow.png" alt=""></button>
             <button class="nxt-btn"><img src="./imagenes/arrow.png" alt=""></button>
             <div class="product-container">
@@ -75,23 +204,23 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/alfamilka.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir Al Carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand"> Milka Negro</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$1200</span>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/alfaoreo.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand"> Oreo</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -99,11 +228,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/alfaoreomilka.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand"> Milka Triple</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -111,11 +240,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/alfapepitos.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand"> Pepitos</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -123,11 +252,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/aquariusmanz.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Aquarius Manzana</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -135,11 +264,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/barrakitkat.png" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Chocolate Kitkat</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -147,11 +276,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/gallesoreo.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Galletitas Oreo</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -159,11 +288,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/galleterrabusi.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Galletitas Terrabusi</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -171,11 +300,11 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/laysjamon.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Papas Lays Jamon</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
@@ -183,17 +312,17 @@
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="./imagenes/minirhodesia.webp" class="product-thumb" alt="">
-                        <button class="card-btn">add to wishlist</button>
+                        <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-description">a short line about the cloth..</p>
+                        <h2 class="product-brand">Rhodesia</h2>
+                        <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
             </div>
-        </section>
-
+        </div>
+        <script src="./JS/Carruselpro.js"></script>
 <!-- footer -->
       <div class="footer-content pt-5 pb-5">
     <div class="copyright-area">
