--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </div>
             </div>
         </div>
-        <script src="./JS/Carruselpro.js"></script>
+        <script src="./JS/script.js"></script>
 <!-- footer -->
       <div class="footer-content pt-5 pb-5">
     <div class="copyright-area">
