--- a/carrito.html
+++ b/carrito.html
@@ -37,28 +37,6 @@
         </section>
     </main>
 
-    <script>
-        // Código JavaScript para manejar el carrito
-        const cartItems = document.getElementById('cart-items');
-        const totalElement = document.getElementById('total');
-        let total = 0;
-
-        document.querySelectorAll('.add-to-cart').forEach(button => {
-            button.addEventListener('click', function() {
-                const product = this.parentElement;
-                const productName = product.querySelector('h3').textContent;
-                const productPrice = parseFloat(product.querySelector('p').textContent.replace('$', ''));
-                
-                // Crear un nuevo elemento para el carrito
-                const li = document.createElement('li');
-                li.textContent = `${productName} - $${productPrice.toFixed(2)}`;
-                cartItems.appendChild(li);
-                
-                // Actualizar el total
-                total += productPrice;
-                totalElement.textContent = `Total: $${total.toFixed(2)}`;
-            });
-        });
-    </script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
