--- a/carrito.html
+++ b/carrito.html
@@ -12,9 +12,10 @@
 </head>
 <body>
     <header>
-        <h1>Carrito de Compras</h1>
         <a href="index.html" ><button class="boton"><i class="fa fa-arrow-left" aria-hidden="true"></i>
         </button></a>
+        <h1>Carrito de Compras</h1>
+        <div></div>
     </header>
     
     <main>
