fusioné con el repositorio de tizi, 26/09

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,9 +19,9 @@
             <label  for=""> <i class="fas fa-bars filtro"></i></label>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a style="color: #397f3e;" class="dropdown-item" href="./Bebidas.html">Bebidas</a></li>
-            <li><a style="color: #397f3e;" class="dropdown-item" href="./Golosinas.html">Golosinas</a></li>
-            <li><a style="color: #397f3e;" class="dropdown-item" href="./Snack.html">Snacks</a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Bebidas</a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Golosinas</a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Snacks</a></li>
           </ul>
         </div>
 
@@ -38,7 +39,12 @@
         </div>
         
     </header>
+    
 
+
+
+
+  </body>
 <!-- footer -->
       <div class="footer-content pt-5 pb-5">
     <div class="copyright-area">
