--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/alfamilka.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/MilkaNegro.png" class="product-thumb" alt="">
                         <button class="card-btn">Añadir Al Carrito</button>
                     </div>
                     <div class="product-info">
@@ -86,7 +86,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/alfaoreo.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/oreo.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -98,7 +98,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/alfaoreomilka.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/MilkaTriple.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -110,7 +110,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/alfapepitos.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/pepitos.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -122,7 +122,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/aquariusmanz.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/aquaman.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -134,7 +134,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/barrakitkat.png" class="product-thumb" alt="">
+                        <img src="./imagenes/kitkat.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -146,7 +146,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/gallesoreo.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/MiniOreo.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -158,7 +158,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/galleterrabusi.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/terrabusi.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -170,7 +170,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/laysjamon.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/Lays.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
@@ -182,7 +182,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/minirhodesia.webp" class="product-thumb" alt="">
+                        <img src="./imagenes/Rhodesia.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
