--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div>
           <form action="">
-            <input  type="text" placeholder="BUSCAR">
+            <input  type="search" placeholder="BUSCAR">
             <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
           </form>
         </div>
@@ -38,7 +38,7 @@
           </button></a>
         </div>
         
-    </header>
+    </header> 
     
 
 
