--- a/inicio_sesion2.html
+++ b/inicio_sesion2.html
@@ -14,7 +14,7 @@
 					<label for="chk" aria-hidden="true">Iniciar Sesión</label>
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="password" name="pswd" placeholder="Contraseña" required="">
-					<button>Crear</button>
+					<button>Iniciar</button>
 				</form>
 			</div>
 			<div class="login">
